--- a/tools/ca_label/src/mainwindow.ui
+++ b/tools/ca_label/src/mainwindow.ui
@@ -6,15 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1581</width>
-    <height>1459</height>
+    <width>1526</width>
+    <height>1256</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QLabel" name="ui_label_video">
+   <widget class="MouseTrackingLabel" name="ui_label_view">
     <property name="geometry">
      <rect>
       <x>0</x>
@@ -85,7 +85,7 @@
     <property name="geometry">
      <rect>
       <x>1080</x>
-      <y>260</y>
+      <y>240</y>
       <width>351</width>
       <height>181</height>
      </rect>
@@ -93,11 +93,11 @@
     <property name="title">
      <string>Mask</string>
     </property>
-    <widget class="QComboBox" name="ui_combo_mask">
+    <widget class="QComboBox" name="ui_combo_masks">
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>50</y>
+       <y>30</y>
        <width>321</width>
        <height>51</height>
       </rect>
@@ -107,7 +107,7 @@
      <property name="geometry">
       <rect>
        <x>190</x>
-       <y>130</y>
+       <y>100</y>
        <width>101</width>
        <height>31</height>
       </rect>
@@ -119,8 +119,8 @@
     <widget class="QPushButton" name="ui_button_mask_add">
      <property name="geometry">
       <rect>
-       <x>50</x>
-       <y>130</y>
+       <x>40</x>
+       <y>100</y>
        <width>101</width>
        <height>31</height>
       </rect>
@@ -129,14 +129,27 @@
       <string>Add</string>
      </property>
     </widget>
+    <widget class="QPushButton" name="ui_button_mask_delete_all">
+     <property name="geometry">
+      <rect>
+       <x>190</x>
+       <y>140</y>
+       <width>101</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Delete All</string>
+     </property>
+    </widget>
    </widget>
    <widget class="QLabel" name="ui_label_x">
     <property name="geometry">
      <rect>
-      <x>1040</x>
-      <y>1030</y>
+      <x>1030</x>
+      <y>1020</y>
       <width>16</width>
-      <height>18</height>
+      <height>21</height>
      </rect>
     </property>
     <property name="text">
@@ -159,9 +172,9 @@
    <widget class="QLabel" name="ui_label_signal">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>0</x>
       <y>1090</y>
-      <width>921</width>
+      <width>1021</width>
       <height>141</height>
      </rect>
     </property>
@@ -178,7 +191,7 @@
       <x>1080</x>
       <y>0</y>
       <width>431</width>
-      <height>251</height>
+      <height>231</height>
      </rect>
     </property>
     <property name="title">
@@ -188,20 +201,20 @@
      <property name="geometry">
       <rect>
        <x>70</x>
-       <y>40</y>
+       <y>30</y>
        <width>291</width>
        <height>31</height>
       </rect>
      </property>
      <property name="text">
-      <string/>
+      <string>../../data/neurofinder/00.00/data/00.00.h5</string>
      </property>
     </widget>
     <widget class="QPushButton" name="ui_button_vselect">
      <property name="geometry">
       <rect>
        <x>370</x>
-       <y>40</y>
+       <y>30</y>
        <width>41</width>
        <height>31</height>
       </rect>
@@ -214,7 +227,7 @@
      <property name="geometry">
       <rect>
        <x>90</x>
-       <y>80</y>
+       <y>70</y>
        <width>101</width>
        <height>31</height>
       </rect>
@@ -227,7 +240,7 @@
      <property name="geometry">
       <rect>
        <x>220</x>
-       <y>80</y>
+       <y>70</y>
        <width>101</width>
        <height>31</height>
       </rect>
@@ -240,7 +253,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>130</y>
+       <y>150</y>
        <width>81</width>
        <height>21</height>
       </rect>
@@ -253,20 +266,20 @@
      <property name="geometry">
       <rect>
        <x>70</x>
-       <y>130</y>
+       <y>150</y>
        <width>291</width>
        <height>31</height>
       </rect>
      </property>
      <property name="text">
-      <string/>
+      <string>../../data/neurofinder/00.00/data/regions.json</string>
      </property>
     </widget>
     <widget class="QLabel" name="ui_label_vpath">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>40</y>
+       <y>30</y>
        <width>51</width>
        <height>31</height>
       </rect>
@@ -279,7 +292,7 @@
      <property name="geometry">
       <rect>
        <x>90</x>
-       <y>170</y>
+       <y>190</y>
        <width>101</width>
        <height>31</height>
       </rect>
@@ -292,7 +305,7 @@
      <property name="geometry">
       <rect>
        <x>220</x>
-       <y>170</y>
+       <y>190</y>
        <width>101</width>
        <height>31</height>
       </rect>
@@ -305,7 +318,7 @@
      <property name="geometry">
       <rect>
        <x>370</x>
-       <y>130</y>
+       <y>150</y>
        <width>41</width>
        <height>31</height>
       </rect>
@@ -314,30 +327,30 @@
       <string>&gt;</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="ui_button_mclear">
+    <widget class="QLabel" name="ui_label_max_frames">
      <property name="geometry">
       <rect>
        <x>90</x>
-       <y>210</y>
+       <y>110</y>
        <width>101</width>
        <height>31</height>
       </rect>
      </property>
      <property name="text">
-      <string>Clear</string>
+      <string>Max Frames</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="ui_button_mclear_all">
+    <widget class="QLineEdit" name="ui_edit_max_frames">
      <property name="geometry">
       <rect>
-       <x>220</x>
-       <y>210</y>
+       <x>190</x>
+       <y>110</y>
        <width>101</width>
-       <height>31</height>
+       <height>27</height>
       </rect>
      </property>
-     <property name="text">
-      <string>Clear All</string>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
      </property>
     </widget>
    </widget>
@@ -345,9 +358,9 @@
     <property name="geometry">
      <rect>
       <x>1080</x>
-      <y>460</y>
-      <width>351</width>
-      <height>281</height>
+      <y>440</y>
+      <width>431</width>
+      <height>381</height>
      </rect>
     </property>
     <property name="title">
@@ -357,7 +370,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>30</y>
+       <y>310</y>
        <width>111</width>
        <height>31</height>
       </rect>
@@ -366,24 +379,24 @@
       <string>[PosX, PosY]</string>
      </property>
     </widget>
-    <widget class="QLabel" name="ui_label_flowmag2">
+    <widget class="QLabel" name="ui_label_value">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>60</y>
+       <y>340</y>
        <width>71</width>
        <height>31</height>
       </rect>
      </property>
      <property name="text">
-      <string>Intensity</string>
+      <string>Value</string>
      </property>
     </widget>
-    <widget class="QLabel" name="ui_label_flowmag">
+    <widget class="QLabel" name="ui_label_value2">
      <property name="geometry">
       <rect>
-       <x>80</x>
-       <y>60</y>
+       <x>70</x>
+       <y>340</y>
        <width>61</width>
        <height>31</height>
       </rect>
@@ -395,8 +408,8 @@
     <widget class="QPushButton" name="ui_button_prev_t">
      <property name="geometry">
       <rect>
-       <x>10</x>
-       <y>100</y>
+       <x>60</x>
+       <y>170</y>
        <width>61</width>
        <height>31</height>
       </rect>
@@ -408,8 +421,8 @@
     <widget class="QPushButton" name="ui_button_next_t">
      <property name="geometry">
       <rect>
-       <x>80</x>
-       <y>100</y>
+       <x>130</x>
+       <y>170</y>
        <width>61</width>
        <height>31</height>
       </rect>
@@ -421,8 +434,8 @@
     <widget class="QLineEdit" name="ui_edit_t">
      <property name="geometry">
       <rect>
-       <x>150</x>
-       <y>100</y>
+       <x>200</x>
+       <y>170</y>
        <width>51</width>
        <height>31</height>
       </rect>
@@ -437,8 +450,8 @@
     <widget class="QPushButton" name="ui_button_set_t">
      <property name="geometry">
       <rect>
-       <x>210</x>
-       <y>100</y>
+       <x>260</x>
+       <y>170</y>
        <width>61</width>
        <height>31</height>
       </rect>
@@ -451,7 +464,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>150</y>
+       <y>210</y>
        <width>51</width>
        <height>18</height>
       </rect>
@@ -463,8 +476,8 @@
     <widget class="QSlider" name="ui_slider_zoom">
      <property name="geometry">
       <rect>
-       <x>70</x>
-       <y>150</y>
+       <x>60</x>
+       <y>210</y>
        <width>201</width>
        <height>20</height>
       </rect>
@@ -491,36 +504,337 @@
       <number>1</number>
      </property>
     </widget>
-    <widget class="QPushButton" name="ui_button_process">
+    <widget class="QPushButton" name="ui_button_pre_process">
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>190</y>
+       <y>30</y>
+       <width>141</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Pre-Process Data</string>
+     </property>
+    </widget>
+    <widget class="QProgressBar" name="ui_progress">
+     <property name="geometry">
+      <rect>
+       <x>170</x>
+       <y>32</y>
+       <width>118</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="value">
+      <number>0</number>
+     </property>
+    </widget>
+    <widget class="QLabel" name="ui_label_frame">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>180</y>
+       <width>51</width>
+       <height>18</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Frame</string>
+     </property>
+    </widget>
+    <widget class="QComboBox" name="ui_combo_mode">
+     <property name="geometry">
+      <rect>
+       <x>70</x>
+       <y>240</y>
+       <width>201</width>
+       <height>31</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QLabel" name="ui_label_mode">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>250</y>
+       <width>51</width>
+       <height>18</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Mode</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="ui_label_intclip">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>290</y>
+       <width>131</width>
+       <height>18</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Intensity Clipping</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="ui_edit_int_low">
+     <property name="geometry">
+      <rect>
+       <x>140</x>
+       <y>280</y>
+       <width>61</width>
+       <height>27</height>
+      </rect>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="ui_edit_int_high">
+     <property name="geometry">
+      <rect>
+       <x>210</x>
+       <y>280</y>
+       <width>61</width>
+       <height>27</height>
+      </rect>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="ui_button_int_clip">
+     <property name="geometry">
+      <rect>
+       <x>280</x>
+       <y>280</y>
+       <width>51</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Set</string>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="ui_edit_ppath">
+     <property name="geometry">
+      <rect>
+       <x>60</x>
+       <y>70</y>
+       <width>291</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="ui_button_psave">
+     <property name="geometry">
+      <rect>
+       <x>70</x>
+       <y>110</y>
        <width>101</width>
        <height>31</height>
       </rect>
      </property>
      <property name="text">
-      <string>Process Data</string>
+      <string>Save</string>
      </property>
     </widget>
-    <widget class="QProgressBar" name="ui_progress_process">
+    <widget class="QPushButton" name="ui_button_pload">
      <property name="geometry">
       <rect>
-       <x>130</x>
-       <y>190</y>
-       <width>118</width>
-       <height>23</height>
+       <x>210</x>
+       <y>110</y>
+       <width>101</width>
+       <height>31</height>
       </rect>
      </property>
+     <property name="text">
+      <string>Load</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="ui_label_ppath">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>70</y>
+       <width>51</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Path:</string>
+     </property>
+    </widget>
+    <widget class="QSlider" name="ui_slider_mask_alpha">
+     <property name="geometry">
+      <rect>
+       <x>280</x>
+       <y>250</y>
+       <width>141</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="maximum">
+      <number>100</number>
+     </property>
      <property name="value">
-      <number>24</number>
+      <number>70</number>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Orientation::Horizontal</enum>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QLabel" name="ui_label_t">
+    <property name="geometry">
+     <rect>
+      <x>1030</x>
+      <y>1050</y>
+      <width>16</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>T</string>
+    </property>
+   </widget>
+   <widget class="QGroupBox" name="ui_group_mask_analysis">
+    <property name="geometry">
+     <rect>
+      <x>1090</x>
+      <y>840</y>
+      <width>421</width>
+      <height>391</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Mask Analysis</string>
+    </property>
+    <widget class="QPushButton" name="ui_button_measure_run">
+     <property name="geometry">
+      <rect>
+       <x>80</x>
+       <y>30</y>
+       <width>131</width>
+       <height>27</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Measure Mask</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="ui_label_histogram">
+     <property name="geometry">
+      <rect>
+       <x>20</x>
+       <y>130</y>
+       <width>381</width>
+       <height>241</height>
+      </rect>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::Shape::Box</enum>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="ui_button_measure_clear">
+     <property name="geometry">
+      <rect>
+       <x>280</x>
+       <y>30</y>
+       <width>71</width>
+       <height>27</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Clear</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="ui_label_safety_margin">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>70</y>
+       <width>111</width>
+       <height>19</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Safety Margin</string>
+     </property>
+    </widget>
+    <widget class="QSlider" name="ui_slider_safety_margin">
+     <property name="geometry">
+      <rect>
+       <x>160</x>
+       <y>80</y>
+       <width>231</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="maximum">
+      <number>5</number>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Orientation::Horizontal</enum>
+     </property>
+     <property name="tickPosition">
+      <enum>QSlider::TickPosition::TicksBelow</enum>
+     </property>
+    </widget>
+    <widget class="QLabel" name="ui_label_safety_margin_2">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>100</y>
+       <width>151</width>
+       <height>19</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Background Margin</string>
+     </property>
+     <property name="textFormat">
+      <enum>Qt::TextFormat::AutoText</enum>
+     </property>
+    </widget>
+    <widget class="QSlider" name="ui_slider_background_margin">
+     <property name="geometry">
+      <rect>
+       <x>160</x>
+       <y>100</y>
+       <width>241</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="maximum">
+      <number>20</number>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Orientation::Horizontal</enum>
+     </property>
+     <property name="tickPosition">
+      <enum>QSlider::TickPosition::TicksBelow</enum>
      </property>
     </widget>
    </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>MouseTrackingLabel</class>
+   <extends>QLabel</extends>
+   <header>src/widgets</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
