--- a/tools/ca_label/src/mainwindow.ui
+++ b/tools/ca_label/src/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1526</width>
-    <height>1256</height>
+    <height>1317</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -86,7 +86,7 @@
      <rect>
       <x>1080</x>
       <y>240</y>
-      <width>351</width>
+      <width>431</width>
       <height>181</height>
      </rect>
     </property>
@@ -98,7 +98,7 @@
       <rect>
        <x>20</x>
        <y>30</y>
-       <width>321</width>
+       <width>301</width>
        <height>51</height>
       </rect>
      </property>
@@ -106,7 +106,7 @@
     <widget class="QPushButton" name="ui_button_mask_delete">
      <property name="geometry">
       <rect>
-       <x>190</x>
+       <x>150</x>
        <y>100</y>
        <width>101</width>
        <height>31</height>
@@ -119,7 +119,7 @@
     <widget class="QPushButton" name="ui_button_mask_add">
      <property name="geometry">
       <rect>
-       <x>40</x>
+       <x>30</x>
        <y>100</y>
        <width>101</width>
        <height>31</height>
@@ -132,8 +132,8 @@
     <widget class="QPushButton" name="ui_button_mask_delete_all">
      <property name="geometry">
       <rect>
-       <x>190</x>
-       <y>140</y>
+       <x>260</x>
+       <y>100</y>
        <width>101</width>
        <height>31</height>
       </rect>
@@ -145,7 +145,7 @@
     <widget class="QPushButton" name="ui_button_mask_focus">
      <property name="geometry">
       <rect>
-       <x>40</x>
+       <x>30</x>
        <y>140</y>
        <width>101</width>
        <height>31</height>
@@ -153,6 +153,22 @@
      </property>
      <property name="text">
       <string>Focus</string>
+     </property>
+    </widget>
+    <widget class="QCheckBox" name="ui_checkbox_mask_pick">
+     <property name="geometry">
+      <rect>
+       <x>330</x>
+       <y>40</y>
+       <width>97</width>
+       <height>25</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Pick Mode</string>
+     </property>
+     <property name="checked">
+      <bool>true</bool>
      </property>
     </widget>
    </widget>
@@ -180,22 +196,6 @@
     </property>
     <property name="text">
      <string>Y</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="ui_label_signal">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>1090</y>
-      <width>1021</width>
-      <height>141</height>
-     </rect>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::Shape::Box</enum>
-    </property>
-    <property name="text">
-     <string/>
     </property>
    </widget>
    <widget class="QGroupBox" name="ui_group_data">
@@ -361,6 +361,9 @@
        <width>101</width>
        <height>27</height>
       </rect>
+     </property>
+     <property name="text">
+      <string>100</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignmentFlag::AlignRight|Qt::AlignmentFlag::AlignTrailing|Qt::AlignmentFlag::AlignVCenter</set>
@@ -533,8 +536,8 @@
     <widget class="QProgressBar" name="ui_progress">
      <property name="geometry">
       <rect>
-       <x>170</x>
-       <y>32</y>
+       <x>160</x>
+       <y>30</y>
        <width>118</width>
        <height>31</height>
       </rect>
@@ -702,6 +705,35 @@
       <enum>Qt::Orientation::Horizontal</enum>
      </property>
     </widget>
+    <widget class="QLabel" name="ui_label_corr_kernel">
+     <property name="geometry">
+      <rect>
+       <x>280</x>
+       <y>30</y>
+       <width>81</width>
+       <height>21</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>Corr Kernel</string>
+     </property>
+    </widget>
+    <widget class="QSpinBox" name="ui_spinbox_corr_kernel">
+     <property name="geometry">
+      <rect>
+       <x>370</x>
+       <y>30</y>
+       <width>47</width>
+       <height>28</height>
+      </rect>
+     </property>
+     <property name="maximum">
+      <number>3</number>
+     </property>
+     <property name="value">
+      <number>3</number>
+     </property>
+    </widget>
    </widget>
    <widget class="QLabel" name="ui_label_t">
     <property name="geometry">
@@ -722,7 +754,7 @@
       <x>1090</x>
       <y>840</y>
       <width>421</width>
-      <height>391</height>
+      <height>451</height>
      </rect>
     </property>
     <property name="title">
@@ -739,22 +771,6 @@
      </property>
      <property name="text">
       <string>Measure Mask</string>
-     </property>
-    </widget>
-    <widget class="QLabel" name="ui_label_histogram">
-     <property name="geometry">
-      <rect>
-       <x>20</x>
-       <y>130</y>
-       <width>381</width>
-       <height>241</height>
-      </rect>
-     </property>
-     <property name="frameShape">
-      <enum>QFrame::Shape::Box</enum>
-     </property>
-     <property name="text">
-      <string/>
      </property>
     </widget>
     <widget class="QPushButton" name="ui_button_measure_clear">
@@ -837,6 +853,46 @@
       <enum>QSlider::TickPosition::TicksBelow</enum>
      </property>
     </widget>
+    <widget class="MplWidget" name="ui_canvas_histogram" native="true">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>160</y>
+       <width>401</width>
+       <height>281</height>
+      </rect>
+     </property>
+    </widget>
+    <widget class="QWidget" name="ui_widget_toolbar2" native="true">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>120</y>
+       <width>401</width>
+       <height>41</height>
+      </rect>
+     </property>
+    </widget>
+   </widget>
+   <widget class="MplWidget" name="ui_canvas_signal" native="true">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>1110</y>
+      <width>1021</width>
+      <height>181</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QWidget" name="ui_widget_toolbar" native="true">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>1070</y>
+      <width>401</width>
+      <height>41</height>
+     </rect>
+    </property>
    </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
@@ -846,6 +902,12 @@
    <class>MouseTrackingLabel</class>
    <extends>QLabel</extends>
    <header>src/widgets</header>
+  </customwidget>
+  <customwidget>
+   <class>MplWidget</class>
+   <extends>QWidget</extends>
+   <header>src/widgets</header>
+   <container>1</container>
   </customwidget>
  </customwidgets>
  <resources/>
